Fixed spacing, added new font

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu Mono:wght@400;500;700;900&display=swap");
 
 *,
 *::after,
@@ -13,17 +13,17 @@ html {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.6;
   font-size: 16px;
-  font-family: "Spartan", sans-serif;
+  font-family: "Ubuntu Mono", sans-serif;
 }
 
 button {
-  font-family: "Spartan", sans-serif;
+  font-family: "Ubuntu Mono", sans-serif;
   cursor: pointer;
   border: none;
 }
 
 input {
-  font-family: "Spartan", sans-serif;
+  font-family: "Ubuntu Mono", sans-serif;
   border: none;
   outline: none;
 }
@@ -74,11 +74,16 @@ img {
         margin-bottom: 15px;
         flex-direction: column;
 
+        &:last-child {
+          margin-left: 20px;
+        }
+
         input {
           border-radius: 10px;
-          width: 95%;
+          width: 100%;
           padding: 10px;
           height: 40px;
+          padding-right: 20px;
           text-transform: uppercase;
 
           &:focus {
@@ -106,11 +111,14 @@ img {
 
       button {
         color: white;
-        margin-right: 15px;
         border-radius: 10px;
         padding: 10px;
-        width: 95%;
+        width: 100%;
         transition: 0.15s ease-in-out;
+
+        &:last-child {
+          margin-left: 20px;
+        }
 
         &:hover {
           opacity: 0.75;
